created App remind tasks
criatead activities, viewbinding, datepiker, and buttons and inputs texts.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppRememberTasks</string>
+    <string name="label_new_task">Criar Tarefa</string>
+    <string name="label_tittle">Titulo</string>
 </resources>
