--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">AppRememberTasks</string>
     <string name="label_new_task">Criar Tarefa</string>
     <string name="label_tittle">Titulo</string>
+    <string name="tarefas">Tarefas</string>
+    <string name="nova_tarefa">Nova Tarefa</string>
+    <string name="label_editar">Editar</string>
+    <string name="label_deletar">Deletar</string>
+    <string name="label_you_dont_have_tasks">Ops! Você não possui nenhuma trarefa</string>
 </resources>
